update image url

--- a/views/vwAccount/premium.hbs
+++ b/views/vwAccount/premium.hbs
@@ -14,18 +14,18 @@
                     Bạn đang là thành viên cấp cao của chúng tôi
                 </h4>
 
-                <img src="/static/images/premium (2).png " class="ml-3" style="width: 40px;height: 40px"/>
+                <img src="/others/premium (2).png " class="ml-3" style="width: 40px;height: 40px"/>
             {{else if this.notSubbed}}
                 <h4 style="font-weight: bold; text-align: center" class="mb-0 ">
                     Trở thành thành viên cấp cao với nhiều nội dung hay "HO"
                 </h4>
-                <img src="/static/images/premium-quality.png " class="" style="width: 40px;height: 40px"/>
+                <img src="/others/premium-quality.png " class="" style="width: 40px;height: 40px"/>
 
             {{else }}
                 <h4 style="font-weight: bold; text-align: center" class="mb-0 ">
                     Yêu cầu đăng ký VIP của bạn đang được duyệt, đừng lo sẽ thanh thôi.
                 </h4>
-                <img src="/static/images/star.png " class="ml-3" style="width: 40px;height: 40px"/>
+                <img src="/others/star.png " class="ml-3" style="width: 40px;height: 40px"/>
             {{/if}}
 
         </div>
@@ -47,7 +47,7 @@
             </div>
         {{else if this.notSubbed}}
             <div class="d-flex justify-content-center">
-                <img src="/static/images/substraction.png" style="width: 300px; height: 300px"/>
+                <img src="/others/substraction.png" style="width: 300px; height: 300px"/>
             </div>
             <div class="d-flex align-items-center mt-3">
                 <div style="color: #ED1C24" class="font-weight-bold mr-3">Đăng ký thành viên premium để tiếp cận với
@@ -65,7 +65,7 @@
             </div>
         {{else}}
             <div class="d-flex justify-content-center">
-                <img src="/static/images/clock.png" style="width: 300px; height: 300px"/>
+                <img src="/others/clock.png" style="width: 300px; height: 300px"/>
             </div>
             <div style="color: #ED1C24" class="font-weight-bold mr-3 mt-3">Đừng lo lắng,
                 chỉ tốn một ít thời gian để chúng
