--- a/views/layouts/account.hbs
+++ b/views/layouts/account.hbs
@@ -31,36 +31,36 @@
                 <div class="mt-1 ">
                 <a href="/account/information" style="color: #ED1C24">
                     {{#if this.information}}
-                        <img src="/static/images/user.png " class="mr-2">
+                        <img src="/static/images/others/user.png " class="mr-2">
                         Thông tin tài khoản
                     </a>
                     {{else}}
                         <a href="/account/information">
-                            <img src="/static/images/user (1).png " class="mr-2">
+                            <img src="/static/images/others/user (1).png " class="mr-2">
                             Thông tin tài khoản
                         </a>
                     {{/if}}
                 </div>
                 <div>
                     {{#if this.saveArticle}}
-                        <a href="#" style="color: #ED1C24"><img src="/static/images/heart.png" class="mr-2">Tin đã
+                        <a href="#" style="color: #ED1C24"><img src="/static/images/others/heart.png" class="mr-2">Tin đã
                             lưu</a>
                     {{else}}
-                        <a href="#"><img src="/static/images/heart (1).png" class="mr-2">Tin đã lưu</a>
+                        <a href="#"><img src="/static/images/others/heart (1).png" class="mr-2">Tin đã lưu</a>
                     {{/if}}
 
 
                 </div>
                 <div>
                     {{#if this.premium}}
-                        <a href="/account/premium" style="color: #ED1C24"><img src="/static/images/premium (1).png" class="mr-2">Premium</a>
+                        <a href="/account/premium" style="color: #ED1C24"><img src="/static/images/others/premium (1).png" class="mr-2">Premium</a>
                     {{else}}
-                        <a href="/account/premium"><img src="/static/images/premium.png" class="mr-2">Premium</a>
+                        <a href="/account/premium"><img src="/static/images/others/premium.png" class="mr-2">Premium</a>
                     {{/if}}
                 </div>
 
                 <div>
-                    <a href="#"><img src="/static/images/logout.png" class="mr-2">Đăng xuất</a>
+                    <a href="#"><img src="/static/images/others/logout.png" class="mr-2">Đăng xuất</a>
                 </div>
 
             </div>
@@ -116,13 +116,13 @@
         </div>
         <div>
             <a>
-                <img src="/static/images/social.png"/>
+                <img src="/static/images/others/social.png"/>
             </a>
             <a>
-                <img src="/static/images/facebook.png" style="width: 26px;height: 26px;margin-left: -2px"/>
+                <img src="/static/images/others/facebook.png" style="width: 26px;height: 26px;margin-left: -2px"/>
             </a>
             <a>
-                <img src="/static/images/instagram.png" style="width: 26px;height: 26px"/>
+                <img src="/static/images/others/instagram.png" style="width: 26px;height: 26px"/>
             </a>
         </div>
     </div>
