--- a/views/vwAccount/forgot-password.hbs
+++ b/views/vwAccount/forgot-password.hbs
@@ -2,15 +2,15 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card text-center">
-                <div class="card-header h5 text-white" style="background-color: rgba(250, 61, 61, 0.63);">Quên mật khẩu</div>
+                <div class="card-header h5 text-white" style="background-color: rgba(250, 61, 61, 0.63);">Thay đổi mật khẩu</div>
                 <div class="card-body px-5">
                     <p class="card-text py-2">
-                        Nhập email hoặc số điện thoại mà bạn dùng để đăng nhập.
+                        Nhập email mà bạn dùng để đăng nhập.
                     </p>
                     <div class="form-outline">
-                        <input type="email" id="typeEmail" class="form-control my-3" placeholder="Nhập email hoặc số điện thoại" />
+                        <input type="email" id="typeEmail" class="form-control my-3" placeholder="Nhập email" />
                     </div>
-                    <a href="#" class="btn btn-primary w-100" style="background-color: rgba(250, 61, 61, 0.63); border: none">Lấy lại mật khẩu</a>
+                    <a href="#" class="btn btn-primary w-100" style="background-color: rgba(250, 61, 61, 0.63); border: none">Đặt lại mật khẩu</a>
                     <div class="d-flex justify-content-between mt-4">
                     </div>
                 </div>
