--- a/views/vwAccount/login-register.hbs
+++ b/views/vwAccount/login-register.hbs
@@ -21,8 +21,8 @@
               <form id="loginForm" method="POST" action="/login-register">
                 <input type="hidden" name="formType" value="login">
                 <div class="form-group">
-                  <input type="email" class="form-control" id="loginEmail" name="email"
-                    placeholder="Nhập email" required>
+                  <input type="email" class="form-control" id="loginEmail" name="email" placeholder="Nhập email"
+                    required>
                 </div>
                 <div class="form-group">
                   <div class="input-group">
@@ -51,9 +51,10 @@
                     style="background-color: #3b5998; border: none; width: 40px; height: 40px;">
                     <i class="fab fa-facebook-f" style="color: white;"></i>
                   </button>
-                  <button class="btn btn-circle btn-danger" style="border: none; width: 40px; height: 40px;">
-                    <i class="fab fa-google" style="color: white;"></i>
-                  </button>
+                  <a href="/auth/google" class="btn btn-circle btn-danger"
+                      style="border: none; width: 40px; height: 40px;">
+                      <i class="fab fa-google" style="color: white;"></i>
+                    </a>
                 </div>
               </div>
             </div>
@@ -63,8 +64,8 @@
               <form id="registerForm" method="POST" action="/login-register">
                 <input type="hidden" name="formType" value="register">
                 <div class="form-group">
-                  <input type="email" class="form-control" id="registerEmail" name="email"
-                    placeholder="Nhập email" required>
+                  <input type="email" class="form-control" id="registerEmail" name="email" placeholder="Nhập email"
+                    required>
                 </div>
                 <div class="form-group">
                   <div class="input-group">
@@ -74,15 +75,17 @@
                 </div>
                 <button type="submit" id="registerSubmit" class="btn btn-success btn-block">Đăng ký</button>
                 <div class="text-center mt-4">
-                  <p>Hoặc đăng ký với tài khoản mạng xã hội <br> Khi nhấn đăng ký bạn đã đồng ý các <a href="#">quy định</a> của báo</p>
+                  <p>Hoặc đăng nhập với tài khoản mạng xã hội <br> Khi nhấn đăng nhập bạn đã đồng ý các <a href="#">quy
+                      định</a> của báo</p>
                   <div class="d-flex justify-content-center">
                     <button class="btn btn-circle btn-primary mr-3"
                       style="background-color: #3b5998; border: none; width: 40px; height: 40px;">
                       <i class="fab fa-facebook-f" style="color: white;"></i>
                     </button>
-                    <button class="btn btn-circle btn-danger" style="border: none; width: 40px; height: 40px;">
+                    <a href="/auth/google" class="btn btn-circle btn-danger"
+                      style="border: none; width: 40px; height: 40px;">
                       <i class="fab fa-google" style="color: white;"></i>
-                    </button>
+                    </a>
                   </div>
                 </div>
               </form>
