--- a/views/vwAccount/role-register.hbs
+++ b/views/vwAccount/role-register.hbs
@@ -1,39 +1,175 @@
 {{#section 'css'}}
 
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet"/>
 
     <link rel="stylesheet"
           href="/static/css/role-register.css">
 {{/section}}
 
+{{#section 'js'}}
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://twitter.github.io/typeahead.js/js/handlebars.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+    <script>
+        $.getJSON('/category/category/get-all-category-names', function (datas) {
+            if (!datas) {
+                Swal.fire
+                ({
+                    title: 'Error!',
+                    text: 'categories empty',
+                    icon: 'error',
+                })
+                return;
+            }
+            $(".prompt").select2({
+                data: datas.map((data) => {
+                    return {
+                        id: data.id,
+                        text: data.name,
+                    }
+                }),
+                width: '100%',
+                multiple: true,
+                placeholder: "Hãy nhập chuyên mục bạn muốn quản lý",
+            });
+        });
+
+        $('#editorSubmit').on('submit', function (e) {
+            e.preventDefault();
+            var datas = $('.prompt').select2('data');
+            const categories = datas.map((data) => data.text);
+
+            var hiddenInput = $('<input>')
+                    .attr('type', 'hidden')
+                    .attr('name', 'categories')
+                    .attr('value', categories);
+            $(this).append(hiddenInput);
+            $(this).off('submit').submit();
+        });
+    </script>
+{{/section}}
+
 
 <div class="bg-white " style="border-radius: 10px">
     <div class="p-4 d-flex align-items-center" style="border-bottom: 1px solid #EEEEEE">
-        <h5 style="font-weight: bold; " class="mb-0 ">Đăng ký vai trò bạn muốn để cùng chúng tôi xây dựng những bài báo
-            chất lượng hơn </h5>
-        <img src="/others/partners.png " class="ml-3" style="width: 40px;height: 40px"/>
+        {{#if this.waiting}}
+            <h5 style="font-weight: bold; " class="mb-0 ">Đơn đăng ký của bạn đã được tiếp nhận, chúng tôi sẽ cố gắng
+                phản hồi sớm nhất có thể </h5>
+            <img src="/others/laughing.png " class="ml-3" style="width: 40px;height: 40px"/>
+        {{else}}
+            <h5 style="font-weight: bold; " class="mb-0 ">Đăng ký vai trò bạn muốn để cùng chúng tôi xây dựng những bài
+                báo
+                chất lượng hơn </h5>
+            <img src="/others/partners.png " class="ml-3" style="width: 40px;height: 40px"/>
+        {{/if}}
+
     </div>
-    <div style="width: 800px; margin: auto" class="user-information mt-3 pb-5 ">
-        <ul class="nav nav-pills mb-3 role-register row" id="pills-tab" role="tablist">
-            <li class="nav-item col-6  px-0" role="presentation">
-                <button class="nav-link active w-100" id="pills-home-tab" data-toggle="pill" data-target="#pills-home"
-                        type="button" role="tab" aria-controls="pills-home" aria-selected="true" >
-                    Đăng ký làm phóng viên
-                </button>
-            </li>
-            <li class="nav-item col-6 px-0" role="presentation">
-                <button class="nav-link  w-100" id="pills-profile-tab" data-toggle="pill"
-                        data-target="#pills-profile"
-                        type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
-                    Đăng ký làm biên
-                    tập viên
-                </button>
-            </li>
-        </ul>
-        <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                ...
+    <div style="width: 700px; margin: auto" class="user-information mt-3 pb-5 ">
+        {{#if this.waiting}}
+            <div class="d-flex justify-content-center">
+                <img src="/others/time-management.png" style=" width: 250px; height: 250px"/>
             </div>
-            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">BTV</div>
-        </div>
+            <div style="color: #ED1C24" class="font-weight-bold mr-3 mt-3">
+                Chúng tôi hiểu bạn rất nóng lòng để có thể hợp tác với chúng tôi, chúng tôi sẽ cố gắng trả lời bạn nhanh
+                nhất có thể. <br/>
+                Trong lúc chờ đợi cùng xem những tin tức
+                <a href="/" style="text-decoration: underline">mới
+                    nhất</a> nào!
+            </div>
+        {{else}}
+            <ul class="nav nav-pills mb-3 role-register row" id="pills-tab" role="tablist">
+                <li class="nav-item col-6  px-0" role="presentation">
+                    <button class="nav-link active w-100" id="pills-home-tab" data-toggle="pill"
+                            data-target="#pills-home"
+                            type="button" role="tab" aria-controls="pills-home" aria-selected="true">
+                        Đăng ký làm phóng viên
+                    </button>
+                </li>
+                <li class="nav-item col-6 px-0" role="presentation">
+                    <button class="nav-link  w-100" id="pills-profile-tab" data-toggle="pill"
+                            data-target="#pills-profile"
+                            type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
+                        Đăng ký làm biên
+                        tập viên
+                    </button>
+                </li>
+            </ul>
+            <div class="tab-content" id="pills-tabContent">
+                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                    <div class="d-flex justify-content-center">
+                        <img src="/others/writing.png" style=" width: 250px; height: 250px"/>
+                    </div>
+                    <div class="mt-5 font-weight-bold">
+
+                        Bạn muốn trở thành một phóng viên cộng tác cho chúng tôi ư? Tuyệt vời,
+                        hãy điền vào đơn đăng ký dưới đây và chúng tôi sẽ phản hồi nhanh nhất có thể!
+                    </div>
+                    <form action="" method="post" class="mt-3">
+                        <div class="form-group">
+                            <input name="role" value="writer" hidden="hidden">
+                            <input name="pseudonym " class="form-control my-3"
+                                   placeholder="Hãy chọn một bút danh thật CHẤT chơi nào!">
+                            <textarea type="text" name="selfAccess" id="" class="form-control"
+                                      placeholder="Hãy trình bày một tí về lý do bạn chọn công việc này."
+                                      aria-describedby="helpId"></textarea>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <a href="/account" class="btn-danger btn px-3 mx-3" style="border-radius: 10px">
+                                <img src="/others/back.png" style="width: 25px; height: 25px">
+                                Hủy đơn
+                            </a>
+
+                            <button type="submit" class="btn-success btn px-3" style="border-radius: 10px">
+                                <img src="/others/upload.png" style="width: 30px; height: 30px">
+                                Nộp đơn
+                            </button>
+                        </div>
+
+                    </form>
+                </div>
+                <div class="tab-pane fade " id="pills-profile" role="tabpanel"
+                     aria-labelledby="pills-profile-tab">
+                    <div class="d-flex justify-content-center">
+                        <img src="/others/content-creation.png" style=" width: 250px; height: 250px"/>
+                    </div>
+                    <div class="mt-5 font-weight-bold">
+                        Biên tập viên là một công việc cần sự tập trung và giám sát cao, chúng tôi rất vui khi bạn
+                        có hứng thú với công việc này.
+                    </div>
+                    <form action="" method="post" id="editorSubmit" class="mt-3">
+                        <div class="form-group">
+                            <input name="role" value="editor" hidden="hidden">
+                            <textarea type="text" name="selfAccess" id="" class="form-control"
+                                      placeholder="Hãy trình bày một tí về lý do bạn chọn công việc này."
+                                      aria-describedby="helpId"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <input class="prompt" multiple placeholder="Search countries...">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <a href="/account" class="btn-danger btn px-3 mx-3" style="border-radius: 10px">
+                                <img src="/others/back.png" style="width: 25px; height: 25px">
+                                Hủy đơn
+                            </a>
+
+                            <button type="submit" class="btn-success btn px-3" style="border-radius: 10px">
+                                <img src="/others/upload.png" style="width: 30px; height: 30px">
+                                Nộp đơn
+                            </button>
+                        </div>
+
+                    </form>
+
+                </div>
+            </div>
+        {{/if}}
+
+
     </div>
 </div>
